fix: adjust height overlap of background section across multiple devices

--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -22,7 +22,7 @@
 .background {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .background__details {
